styles.css
body{
    background-color: rgb(254, 255, 237);
    color: rgb(17, 17, 17);
    font-family: "Artifika", Times, serif;
    box-sizing: border-box;
}

h1 {
    margin-top: 0px;
    text-align: center;
    font-size: 40px;
}
.header{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 40px;
    
}
.block-container{
    display: flex;
    flex-wrap: wrap;
    width: 1000px;
    height: 600px; 
    margin-left: auto;
    margin-right: auto;
}

.block {
    border: 1px solid black;
    background-color: aquamarine;
    margin: -1px;
    /* height: 50%; */
}

.new-btn {
    font-family: "Artifika ";
    padding: 10px;
    color: brown;
    font-weight: bold;
    border : 4px solid;
    -webkit-border-radius: 18px;
    -moz-border-radius: 18px;
    -ms-border-radius: 18px;
    -o-border-radius: 18px;
    border-radius: 18px;
    flex-grow: 0;


}

